// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST tests test.html ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "			a {
				display: flex;
			}
",
      "file": "/test.html",
      "hasBOM": false,
    },
    Object {
      "css": "font-family: serif serif",
      "file": "/test.html",
      "hasBOM": false,
    },
    Object {
      "css": "<!DOCTYPE html>
<html>
	<head>
		<style type=\\"text/css\\">
			a {
				display: flex;
			}
		</style>
	</head>
	<body>
		<div style=\\"font-family: serif serif\\"></div>
	</body>
</html>
",
      "file": "/test.html",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "display",
              "raws": Object {
                "before": "
				",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 18,
                  "line": 6,
                  "offset": 24,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 6,
                  "offset": 11,
                },
              },
              "type": "decl",
              "value": "flex",
            },
          ],
          "raws": Object {
            "after": "
			",
            "before": "			",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 4,
              "line": 7,
              "offset": 29,
            },
            "inputId": 0,
            "start": Object {
              "column": 4,
              "line": 5,
              "offset": 3,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "<!DOCTYPE html>
<html>
	<head>
		<style type=\\"text/css\\">
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 5,
          "offset": 0,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "font-family",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 38,
              "line": 11,
              "offset": 23,
            },
            "inputId": 0,
            "start": Object {
              "column": 15,
              "line": 11,
              "offset": 0,
            },
          },
          "type": "decl",
          "value": "serif serif",
        },
      ],
      "raws": Object {
        "after": "",
        "codeAfter": "\\"></div>
	</body>
</html>
",
        "codeBefore": "		</style>
	</head>
	<body>
		<div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 15,
          "line": 11,
          "offset": 0,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test.vue ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": ".add-button {
  color: v-bind(buttonColor);
  pointer-events: v-bind(\\"inputValue ? 'initial' : 'none'\\");
}
.todo-list {
  list-style: none;
}
.todo-item {
  background-color: #eef;
}
.todo-item--done {
  background-color: #3fb983;
  color: #fff;
}
",
      "file": "/test.vue",
      "hasBOM": false,
    },
    Object {
      "css": "<template>
  <input v-model=\\"inputValue\\" />
  <button @click=\\"handleClick\\" class=\\"add-button\\">Add ToDo</button>
  <ul class=\\"todo-list\\">
    <li
      v-for=\\"(todo, index) in todoItems\\"
      :key=\\"todo.id\\"
      class=\\"todo-item\\"
      :class=\\"{ 'todo-item--done': todo.done }\\"
      @click=\\"todo.done = !todo.done\\"
    >
      <span v-if=\\"todo.done\\">✓</span> {{ todo.text }}
    </li>
  </ul>
</template>
<script setup>
import { ref, computed } from \\"vue\\"
const inputValue = ref(\\"\\")
const todoItems = ref([])

function handleClick() {
  todoItems.value.push({
    id: Math.random().toString(36).slice(-8),
    done: false,
    text: inputValue.value,
  })
  inputValue.value = \\"\\"
}

const buttonColor = computed(() => (inputValue ? \\"black\\" : \\"white\\"));
const buttonPointerEvents = computed(() =>
  inputValue.value ? \\"initial\\" : \\"none\\"
);
</script>
<style>
.add-button {
  color: v-bind(buttonColor);
  pointer-events: v-bind(\\"inputValue ? 'initial' : 'none'\\");
}
.todo-list {
  list-style: none;
}
.todo-item {
  background-color: #eef;
}
.todo-item--done {
  background-color: #3fb983;
  color: #fff;
}
</style>
",
      "file": "/test.vue",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 29,
                  "line": 37,
                  "offset": 42,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 37,
                  "offset": 16,
                },
              },
              "type": "decl",
              "value": "v-bind(buttonColor)",
            },
            Object {
              "prop": "pointer-events",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 60,
                  "line": 38,
                  "offset": 103,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 38,
                  "offset": 46,
                },
              },
              "type": "decl",
              "value": "v-bind(\\"inputValue ? 'initial' : 'none'\\")",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".add-button",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 39,
              "offset": 105,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 36,
              "offset": 0,
            },
          },
          "type": "rule",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "list-style",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 19,
                  "line": 41,
                  "offset": 138,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 41,
                  "offset": 122,
                },
              },
              "type": "decl",
              "value": "none",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".todo-list",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 42,
              "offset": 140,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 40,
              "offset": 107,
            },
          },
          "type": "rule",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "background-color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 25,
                  "line": 44,
                  "offset": 179,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 44,
                  "offset": 157,
                },
              },
              "type": "decl",
              "value": "#eef",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".todo-item",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 45,
              "offset": 181,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 43,
              "offset": 142,
            },
          },
          "type": "rule",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "background-color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 28,
                  "line": 47,
                  "offset": 229,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 47,
                  "offset": 204,
                },
              },
              "type": "decl",
              "value": "#3fb983",
            },
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 14,
                  "line": 48,
                  "offset": 244,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 48,
                  "offset": 233,
                },
              },
              "type": "decl",
              "value": "#fff",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".todo-item--done",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 49,
              "offset": 246,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 46,
              "offset": 183,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>
",
        "codeBefore": "<template>
  <input v-model=\\"inputValue\\" />
  <button @click=\\"handleClick\\" class=\\"add-button\\">Add ToDo</button>
  <ul class=\\"todo-list\\">
    <li
      v-for=\\"(todo, index) in todoItems\\"
      :key=\\"todo.id\\"
      class=\\"todo-item\\"
      :class=\\"{ 'todo-item--done': todo.done }\\"
      @click=\\"todo.done = !todo.done\\"
    >
      <span v-if=\\"todo.done\\">✓</span> {{ todo.text }}
    </li>
  </ul>
</template>
<script setup>
import { ref, computed } from \\"vue\\"
const inputValue = ref(\\"\\")
const todoItems = ref([])

function handleClick() {
  todoItems.value.push({
    id: Math.random().toString(36).slice(-8),
    done: false,
    text: inputValue.value,
  })
  inputValue.value = \\"\\"
}

const buttonColor = computed(() => (inputValue ? \\"black\\" : \\"white\\"));
const buttonPointerEvents = computed(() =>
  inputValue.value ? \\"initial\\" : \\"none\\"
);
</script>
<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 36,
          "offset": 0,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests unknown-lang.vue ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {}
",
      "file": "/unknown-lang.vue",
      "hasBOM": false,
    },
    Object {
      "css": "<template>
</template>
<script setup>
</script>
<style lang=\\"unknown\\">
unknown////
</style>
<style lang=\\"css\\">
a {}
</style>
",
      "file": "/unknown-lang.vue",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [],
          "raws": Object {
            "after": "",
            "before": "",
            "between": " ",
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 4,
              "line": 9,
              "offset": 3,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 0,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>
",
        "codeBefore": "<template>
</template>
<script setup>
</script>
<style lang=\\"unknown\\">
unknown////
</style>
<style lang=\\"css\\">
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 0,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;
